@@ -1,0 +1,5 @@
+# Copyright (C) 2004 Laurent Sansonetti
+
+# Removing the data/locale directory
+require 'fileutils'
+FileUtils.rm_rf('locale')
